#283 update versions